--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,10 +21,10 @@
 
 :root[data-theme='dark'] {
   --bg-color: #1b1f1d;
-  --text-color: #e6e6e6;
+  --text-color: #cfd6d3;
   --nav-bg-color: #222826;
   --nav-text-color: #cfcfcf;
-  --nav-active-text-color: #4fd18b;
+  --nav-active-text-color: #6cd899;
 }
 
 *,
