--- a/src/styles/common/index.scss
+++ b/src/styles/common/index.scss
@@ -1,4 +1,5 @@
 @forward './side-nav';
+@forward './doc-viewer';
 
 #main {
   display: flex;
@@ -6,7 +7,7 @@
   overflow: hidden;
 
   > aside {
-    width: 200px;
+    width: 240px;
     border-right: 2px solid var(--nav-active-text-color);
     padding: 1rem;
     overflow: auto;
@@ -18,6 +19,7 @@
     flex: 1;
     overflow: auto;
     padding: 3rem;
+    padding-bottom: 6rem;
   }
 }
 
@@ -42,6 +44,7 @@
       position: fixed;
       top: 0;
       left: 0;
+      z-index: 999;
       width: 100%;
       border: none;
       padding: 0;
@@ -50,6 +53,7 @@
     > article {
       margin-top: 3rem;
       padding: 2rem;
+      padding-bottom: 4rem;
     }
   }
 
