--- a/src/styles/common/index.scss
+++ b/src/styles/common/index.scss
@@ -17,7 +17,8 @@
 
   > article {
     flex: 1;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 3rem;
     padding-bottom: 6rem;
   }
