--- a/src/styles/common/_doc-viewer.scss
+++ b/src/styles/common/_doc-viewer.scss
@@ -7,36 +7,38 @@
     line-height: 1.7em;
 
     strong {
-      position: relative;
-      display: inline-block;
-      color: var(--nav-active-text-color);
-      cursor: pointer;
+      &:has(em) {
+        position: relative;
+        display: inline-block;
+        color: var(--nav-active-text-color);
+        cursor: pointer;
 
-      em {
-        position: absolute;
-        top: 100%;
-        left: -2rem;
-        z-index: 9;
-        max-height: 0;
-        overflow: hidden;
-        border: 1px solid var(--nav-active-text-color);
-        padding: 0 1em;
-        border-radius: 0.5em;
-        background-color: var(--nav-bg-color);
-        opacity: 0;
-        font-weight: normal;
-        font-size: 0.9em;
-        white-space: pre;
-        transition:
-          opacity 0.3s ease,
-          max-height 0.3s ease;
-      }
-
-      &:hover,
-      &:focus {
         em {
-          opacity: 1;
-          max-height: 999px;
+          position: absolute;
+          top: 100%;
+          left: -2rem;
+          z-index: 9;
+          max-height: 0;
+          overflow: hidden;
+          border: 1px solid var(--nav-active-text-color);
+          padding: 0 1em;
+          border-radius: 0.5em;
+          background-color: var(--nav-bg-color);
+          opacity: 0;
+          font-weight: normal;
+          font-size: 0.9em;
+          white-space: pre;
+          transition:
+            opacity 0.3s ease,
+            max-height 0.3s ease;
+        }
+
+        &:hover,
+        &:focus {
+          em {
+            opacity: 1;
+            max-height: 999px;
+          }
         }
       }
     }
