添加右侧栏、文字内容样式处理

--- a/src/styles/common/_side-nav.scss
+++ b/src/styles/common/_side-nav.scss
@@ -1,73 +1,69 @@
-#main {
-  > aside {
-    h1 {
-      border-bottom: 1px solid var(--nav-active-text-color);
-      margin: 0 0 1rem;
-      padding: 0.5em 0;
-      color: var(--nav-active-text-color);
-      font-size: 1.5em;
-      text-align: center;
-    }
+#side-nav {
+  h1 {
+    border-bottom: 1px solid var(--nav-active-text-color);
+    margin: 0 0 1rem;
+    padding: 0.5em 0;
+    color: var(--nav-active-text-color);
+    font-size: 1.5em;
+    text-align: center;
+  }
 
-    nav {
-      margin-top: 2rem;
+  nav {
+    margin-top: 2rem;
 
-      a {
-        display: block;
-        padding: 0.25rem 1rem;
-        cursor: pointer;
+    a {
+      display: block;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
 
-        &.active {
-          color: var(--nav-active-text-color);
-        }
+      &.active {
+        color: var(--nav-active-text-color);
       }
     }
+  }
 
-    button {
-      display: none;
-    }
+  button {
+    display: none;
   }
 }
 
 @media (max-width: 767px) {
-  #main {
-    > aside {
-      h1 {
-        position: relative;
-        margin: 0;
-        padding: 0.5em 1em;
-        text-align: left;
-        font-size: 1.2em;
+  #side-nav {
+    h1 {
+      position: relative;
+      margin: 0;
+      padding: 0.5em 1em;
+      text-align: left;
+      font-size: 1.2em;
+    }
+
+    nav {
+      margin-top: 0;
+      border-bottom: 1px solid var(--nav-active-text-color);
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.3s ease;
+
+      a {
+        margin: 1rem;
       }
+    }
 
-      nav {
-        margin-top: 0;
-        border-bottom: 1px solid var(--nav-active-text-color);
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.3s ease;
+    button {
+      display: flex;
+      position: fixed;
+      top: 0;
+      right: 0.5rem;
+      width: 3rem;
+      height: 3rem;
+      border: none;
+      background-color: transparent;
+      color: var(--nav-active-text-color);
+      font-size: 1.5em;
 
-        a {
-          margin: 1rem;
-        }
-      }
-
-      button {
-        display: flex;
-        position: fixed;
-        top: 0;
-        right: 0.5rem;
-        width: 3rem;
-        height: 3rem;
-        border: none;
-        background-color: transparent;
-        color: var(--nav-active-text-color);
-        font-size: 1.5em;
-
-        &:focus {
-          + nav {
-            max-height: 999px;
-          }
+      &:focus {
+        + nav {
+          max-height: 999px;
         }
       }
     }
