--- a/src/styles/common/_doc-viewer.scss
+++ b/src/styles/common/_doc-viewer.scss
@@ -1,6 +1,10 @@
 #doc-viewer {
+  h2:not(:first-child) {
+    margin-top: 4em;
+  }
+
   h3:not(h2 + h3) {
-    margin-top: 3em;
+    margin-top: 2em;
   }
 
   p {
@@ -52,6 +56,16 @@
 
     > p {
       margin: 0.5em 0;
+      font-size: 0.9em;
+    }
+  }
+
+  ul,
+  ol {
+    li {
+      opacity: 0.5;
+      line-height: 2em;
+      font-size: 0.9em;
     }
   }
 }
