--- a/src/styles/common/_meta_info.scss
+++ b/src/styles/common/_meta_info.scss
@@ -14,7 +14,7 @@
     }
   }
 
-  table {
+  .meta-table {
     margin: 1rem 0;
 
     td {
@@ -36,6 +36,25 @@
         text-decoration: none;
         font-size: small;
       }
+    }
+  }
+
+  .meta-catalog {
+    margin-top: 2rem;
+    border-top: 1px solid var(--nav-active-text-color);
+    padding-top: 2rem;
+
+    ul {
+      margin: 0.25rem 0;
+      padding-left: 1.5em;
+    }
+
+    a {
+      display: block;
+      color: var(--nav-active-text-color);
+      line-height: 2em;
+      text-decoration: none;
+      cursor: pointer;
     }
   }
 }
